fix logos styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,13 @@
   margin-bottom: 2rem;
 }
 
+.projects-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
 .contact-me {
   background-color: #FF5C2C;
 }
@@ -289,6 +296,22 @@ width: 130px;
   }
   .icons-container {
     width: 75%;
+  }
+  .main-title {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+  .ion-logo {
+    width: 73px;
+  }
+  .ion-website {
+    width: 100px;
+  }
+  .hd-website {
+    width: 170px;
+  }
+  .right-grid {
+    padding-bottom: 4rem;
   }
 }
 
